--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#Intro">Personal profile</a></li>
-								<li><a href="#work">Work</a></li>
-								<li><a href="#about">About</a></li>
-								<li><a href="#contact">Contact</a></li>
+								<li><a href="#Intro">Profile</a></li>
+								<li><a href="#work">Interest</a></li>
+								<li><a href="#about">Ideal Job</a></li>
+								<li><a href="#contact">Project</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
