--- a/index.html
+++ b/index.html
@@ -55,7 +55,10 @@
 							<article id="work">
 								<h2 class="major">Work</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
+								<p>Background
+My fascination with IT started when the first computer arrived home. I remember sitting on the floor watching my father put it together. After a bit of persistent asking, I was allowed to have a look. From that moment on I was hooked. I remember playing Monster Truck Madness for hours, like it was yesterday. Bed time was always hard, but we would always find excuses why we needed to stay up. 
+However, as I got older my priorities changed and the games were replaced with school assignments, the CDs with encyclopedia for windows. Then in the late 90s the internet became mainstream and my focus turned to this new and amazing thing. Study quickly turned from books to online content. Although Instead of homework I would chat for hours on ICQ and gaming against friends who lived streets away. Even to this day, every new piece of tech interests me. The new era of the ‘Internet of Things’ is set to be exciting, with all the new automated and connected technology.
+.</p>
 								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
 							</article>
 
