--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 						<nav>
 							<ul>
 								<li><a href="#Intro">Profile</a></li>
-								<li><a href="#work">Interest</a></li>
+								<li><a href="#Interest">Interest</a></li>
 								<li><a href="#about">Ideal Job</a></li>
 								<li><a href="#contact">Project</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
@@ -52,14 +52,23 @@
 							</article>
 
 						<!-- Work -->
-							<article id="work">
+							<article id="Interest">
 								<h2 class="major">Work</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 								<p>Background
+									
 My fascination with IT started when the first computer arrived home. I remember sitting on the floor watching my father put it together. After a bit of persistent asking, I was allowed to have a look. From that moment on I was hooked. I remember playing Monster Truck Madness for hours, like it was yesterday. Bed time was always hard, but we would always find excuses why we needed to stay up. 
 However, as I got older my priorities changed and the games were replaced with school assignments, the CDs with encyclopedia for windows. Then in the late 90s the internet became mainstream and my focus turned to this new and amazing thing. Study quickly turned from books to online content. Although Instead of homework I would chat for hours on ICQ and gaming against friends who lived streets away. Even to this day, every new piece of tech interests me. The new era of the ‘Internet of Things’ is set to be exciting, with all the new automated and connected technology.
 .</p>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
+								<p>Interest
+My current interests are in the network engineering field. After twelve years building the infrastructure, I am interested to learn how to design, build and implement IP networks. I am also interested to broaden the scope and find the next IP solution after cloud based infrastructure.
+
+Experience
+For the past twelve years I have worked for Telstra, Australia’s largest telecommunications company. I progressed from installing and maintaining the first ADSL1 connections to configuring small business networks. Recently though, I have been migrating hundreds of homes and businesses to the NBN network or onto Telstra fibre services. Some of the big projects I have been involved in include McDonalds, Australia Post, Woolworth group and the Department of Defence.
+
+Future   
+I chose to study with RMIT University after enjoying a recent IP networking course I attended at the Melbourne campus through the leadership program at work. I found the University to be a friendly, innovative and a collaborative environment, one I could enjoy learning with. After researching and comparing the universities, I found RMIT to suit my personal needs at this particular time in my life. During my time with RMIT, I hope to not only obtain my degree, but develop a greater understanding of the I.T industry. Also, to gain the necessary skills and knowledge to start my own business as a network engineer.
+.</p>
 							</article>
 
 						<!-- About -->
