--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#Intro">Profile</a></li>
+								<li><a href="#Profile">Profile</a></li>
 								<li><a href="#Interest">Interest</a></li>
 								<li><a href="#about">Ideal Job</a></li>
 								<li><a href="#contact">Project</a></li>
@@ -44,8 +44,8 @@
 					<div id="main">
 
 						<!-- Intro -->
-							<article id="intro">
-								<h2 class="major">Intro</h2>
+							<article id="Profile">
+								<h2 class="major">Profile</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
 								<p>My name is Graham Hibbert, but you can call me Doc. I was given the nickname, as my last name reminded my friend of Dr Hibbert from the Simpsons. I enjoy all sports, but mainly Australian Rules Football. I played for several clubs in the amateur leagues, most recently the Warwick/Greenwood Bulls FC. Due to becoming a father for the second time, my priorities have change and I now enjoy spending time with my family. My wife Jacinta and I are proud parents of two children, Hugh (18 months) and baby Novella (6 weeks). Jacinta and I are both born Australians, only speaking English at home with a Christian values but we don’t attend church. We hope to raise our children (with the help of our close family support) to be well educated, hardworking, polite members of society. Other than Sports, my main hobby is motorcycles. I own a 2013 Ducati Diavel Dark, a beautiful motorcycle that I love taking out and riding through the country. It gives me a sense of freedom from the world, a place to be with my own thoughts. Some call it mediation.</a>.</p>
 								<p>I started my schooling at Katanning Primary School, but completed my primary educating in Perth. I graduated to Warwick Senior High, where after five years completed my Tertiary Entrance Examination. Instead of attending university, I stumbled between jobs and never found my feet. Thankfully however my father found me a position in a telecommunication traineeship with Telstra, where I gained my certificate three in telecommunications. After successfully gaining employment, I continued further on-site training and acquired my certificate four. Currently still employed and now a student with RMIT university.</p>
@@ -53,11 +53,11 @@
 
 						<!-- Work -->
 							<article id="Interest">
-								<h2 class="major">Work</h2>
+								<h2 class="major">Interst</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>Background
+								<p>Background</p>
 									
-My fascination with IT started when the first computer arrived home. I remember sitting on the floor watching my father put it together. After a bit of persistent asking, I was allowed to have a look. From that moment on I was hooked. I remember playing Monster Truck Madness for hours, like it was yesterday. Bed time was always hard, but we would always find excuses why we needed to stay up. 
+<p>My fascination with IT started when the first computer arrived home. I remember sitting on the floor watching my father put it together. After a bit of persistent asking, I was allowed to have a look. From that moment on I was hooked. I remember playing Monster Truck Madness for hours, like it was yesterday. Bed time was always hard, but we would always find excuses why we needed to stay up. 
 However, as I got older my priorities changed and the games were replaced with school assignments, the CDs with encyclopedia for windows. Then in the late 90s the internet became mainstream and my focus turned to this new and amazing thing. Study quickly turned from books to online content. Although Instead of homework I would chat for hours on ICQ and gaming against friends who lived streets away. Even to this day, every new piece of tech interests me. The new era of the ‘Internet of Things’ is set to be exciting, with all the new automated and connected technology.
 .</p>
 								<p>Interest
