--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 							<ul>
 								<li><a href="#Profile">Profile</a></li>
 								<li><a href="#Interest">Interest</a></li>
-								<li><a href="#about">Ideal Job</a></li>
+								<li><a href="#Ideal Job">Ideal Job</a></li>
 								<li><a href="#contact">Project</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
@@ -72,10 +72,26 @@ However, as I got older my priorities changed and the games were replaced with s
 							</article>
 
 						<!-- About -->
-							<article id="about">
-								<h2 class="major">About</h2>
+							<article id="Ideal Job">
+								<h2 class="major">Ideal Job</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
+								<p>https://www.seek.com.au/job/38446195?searchrequesttoken=5c0d4c76-6c33-4d76-83af-e5fba3fe0f63&type=standout</p>
+								<p>General Manager Information Technology</p>
+								<p>description</p>
+<p>An IT team manager, whose job is to lead a team to assist in the transformation of the organisation. To maintain, design, build and implement an IT platform in line with the organisation short term and long-term goals.</p>
+								<p>Requirements</p>
+<p>A degree in Information Technology, specialising in network engineering is essential. Experience in designing and implementing complex IT environments.  Experience in project and team management, which requires a high level of communication and collaboration skills. Also a positive, innovative and forward thinking mind set.</p>
+								<p>Current experience</p>
+<p>Certificate four in Telecommunications and 12+ years’ experience in the IT industry. Currently have 5+ years’ experience in team management. A positive and innovative mindset and exceptional interpersonal skills.</p>
+								<p>Future Pathway</p>
+<p>To obtain an equivalent position, I must complete the Bachelor of Information Technology degree. Then further the degree in network engineering, also acquiring several certifications such CCNA, CCNP etc. To compliment the degrees, I require a job in a relevant field to obtain the necessary experience required to handle complex IT Platforms.
+•	1-3 years- Complete Bachelor of Information and Technology degree
+•	Acquire position as a System Administrator
+•	4-5 years- further network engineering study
+•	Acquire position in project managing of IT infrastructure
+•	Acquire relevant certifications
+•	7-10 years- apply for desired position
+.</p>
 							</article>
 
 						<!-- Contact -->
