--- a/index.html
+++ b/index.html
@@ -84,14 +84,8 @@ However, as I got older my priorities changed and the games were replaced with s
 								<p>Current experience</p>
 <p>Certificate four in Telecommunications and 12+ years’ experience in the IT industry. Currently have 5+ years’ experience in team management. A positive and innovative mindset and exceptional interpersonal skills.</p>
 								<p>Future Pathway</p>
-<p>To obtain an equivalent position, I must complete the Bachelor of Information Technology degree. Then further the degree in network engineering, also acquiring several certifications such CCNA, CCNP etc. To compliment the degrees, I require a job in a relevant field to obtain the necessary experience required to handle complex IT Platforms.
-•	1-3 years- Complete Bachelor of Information and Technology degree
-•	Acquire position as a System Administrator
-•	4-5 years- further network engineering study
-•	Acquire position in project managing of IT infrastructure
-•	Acquire relevant certifications
-•	7-10 years- apply for desired position
-.</p>
+<p>To obtain an equivalent position, I must complete the Bachelor of Information Technology degree. Then further the degree in network engineering, also acquiring several certifications such CCNA, CCNP etc. To compliment the degrees, I require a job in a relevant field to obtain the necessary experience required to handle complex IT Platforms.</p>
+
 							</article>
 
 						<!-- Contact -->
