--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 								<li><a href="#Profile">Profile</a></li>
 								<li><a href="#Interest">Interest</a></li>
 								<li><a href="#IdealJob">Ideal Job</a></li>
-								<li><a href="#contact">Project</a></li>
+								<li><a href="#Project">Project</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
@@ -89,35 +89,38 @@ However, as I got older my priorities changed and the games were replaced with s
 							</article>
 
 						<!-- Contact -->
-							<article id="contact">
-								<h2 class="major">Contact</h2>
-								<form method="post" action="#">
-									<div class="fields">
-										<div class="field half">
-											<label for="name">Name</label>
-											<input type="text" name="name" id="name" />
-										</div>
-										<div class="field half">
-											<label for="email">Email</label>
-											<input type="text" name="email" id="email" />
-										</div>
-										<div class="field">
-											<label for="message">Message</label>
-											<textarea name="message" id="message" rows="4"></textarea>
-										</div>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send Message" class="primary" /></li>
-										<li><input type="reset" value="Reset" /></li>
-									</ul>
-								</form>
-								<ul class="icons">
-									<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon fa-github"><span class="label">GitHub</span></a></li>
-								</ul>
-							</article>
+							<article id="Project">
+								<h2 class="major">Project</h2>
+								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
+								<p>The Project</p>
+<p>To build a medical device capable of monitoring and reporting a patient’s vital health signs via an online application. Vita Life is a health monitoring apparatus that syncs to your specialist doctor via a simple to use online application. The apparatus will monitor different vital signs such as heart rate, heart arrhythmias, blood pressure and blood oxidation levels. Instantly reporting anomalies to your specialist health care professional. The specialist can then review the patient’s data and act accordingly. Vita Life will have the ability to set alarm parameters, once triggered will request immediate response from either a medical practitioner or emergency medical unit. An ambulance can be dispatched to the GPS coordinates transmitted and a notification to the patient’s specialist if the emergency parameters are met.</p>
+								<p>Importance</p>
+<p>Vita Life is a life saving device that can monitor the health of our elderly. According to Australian Institute of Health and Welfare 2018 report (Australia’s health series no. 16. AUS 221) “The prevalence of Coronary Heart Disease (CHD) increases rapidly with age, affecting around 1 in 6 adults aged 75 and over”. With the average age of the population growing and without medical intervention, these statistics will continue to grow. “In 2016, CHD was the leading single cause of death in Australia”. With a simple and easy to use interface, the elderly can help monitor their own life signs, dramatically reducing the response time in case of an emergency.</p>
+								<p>The Vita Life in detail</p>
+<p>•	Vita life’s core is a 10-inch android or iOS tablet with sim card
+•	Weighted docking station
+•	1x ankle monitor  
+•	1x wrist monitor
+	•	1x heart monitor</p>
+<p>At the centre of Vita Life is a 10-inch tablet running either android or iOS. The display will have three large buttons, for ease of use. Making the interface easy to read quickly, also reduces the time required to call for help. The icons should read left to right- Test – Emergency - Monitor.
+<p>Test- the test function is a quick five minute check-up performed daily. The test will run through a series of checks. First check is the heart rate, taken from both the wrist and ankle monitors. A single snap shot of each heart rate is taken. For the remainder of the test the ankle and wrist monitors will switch to monitor the oxygen levels in the patient’s blood stream. Third function performed is the heart monitor. During this process the heart pad will detect and monitor the heart rhythm over the five minute test. After all tests are complete, a visual and auditable alert will indicate the test process is complete. Once completed the application will save all data to a file and send to the specialists for viewing.</p>
+<p>Emergency- To help distinguish the emergency button, it will present slightly larger than the other two icons and outlined by a bright red border. This icon will activate the emergency call function that immediately alerts for emergency medical attention. By doing so it will automatically send the GPS coordinates and stored medical history to the incoming ambulance.</p>
+<p>Monitor- The monitor function is a real time test a specialist call run from a remote location. Once all devices are worn the patient will activate the monitor button and the specialist can run any one or multiple test of their choosing. This gives the specialist the ability to have regular check-ups and track results. The function also allows for a video conferencing, which is prompted and once accepted it automatically connects to reduce the stress on the elderly. (this function can be turned off for privacy reasons)</p>
+<p>The ankle and wrist monitors- The ankle and wrist monitors have bio metric sensors that picks up the slightest colour variations in skin and blood colour. Giving a precise measurement of the blood oxidation level, which is essential for monitoring the cardiovascular system. The monitors will also have a sophisticated heart rate monitor to take accurate pulse rates and a pressure sensor to measure systolic and diastolic pressure. Data is sent to the Vita Life Tablet by wifi direct technology. Allowing easy and hassle-free wireless connectivity, whilst removing further trip hazards caused by cables.</p>
+<p>Heart monitor- The heart pad monitor is contained in an elastic strap that can be pulled up after stepping into it or pulled over the head like a shirt. This strap is then positioned on the chest so the pad is just below the left breast. The biometric sensors will then detect the hearts rhythm by recording sound and electrical impulses sent to the heart. The information is stored in a graphical layout similar to an electrocardiograph.</p>
+<p>Sim Card- the inbuilt sim card reduces the need for a fixed line connection. Once all data is collected, it is store on site and a copy sent through the 5G network to the specialist practitioner. 5G also allows for the required bandwidth for remote monitoring.</p>
+
+
+
+								<p>Requirements</p>
+								<p>Tools</p>
+<p>To be successful, the project will require an application to be developed to sync to different devices at the same to time. Easy to use functions and step by step instructions for monitor placement. Durable monitors for continual use and also will need to be resistant to water. Monitors will need to be a clinical grade to achieve accurate results. Cost should not be an option. Will also require current medical equipment to calibrate and test the new apparatus. Trial period with qualified specialist practitioners to ensure product performing to specification.</p>  
+								<p>Implementation and feasibility:</p>
+<p>Application- software engineer is required to develop Application for both android and IOS systems. Program development for cloud-based platform with integrated data encryption. Cloud based storage also required. RMIT software engineer and network engineer students or graduates possible for collaboration. Hirer software/network engineer firm to develop the application and platform on our behalf. Third party or in-house hosting of server- needs to be costed.</p>
+<p>Wearable tech- sensor technology already developed and easily adaptable. Sensor can be obtained through sources such as from  https://www.digikey.com.au. Will require experienced electronic engineer to integrate sensors into wearable design.</p>
+								<p>Outcome</p>
+<p>With continual monitoring of patient’s vital life signs, doctors have the ability to track their patients’ health. This close monitoring gives the doctor an early detection tool to assist in diagnoses of underlying medical conditions, to allow greater accuracy in the prescribing of medicine and or medical procedures. By intervening early, it significantly reduces the rate of hospital administrations and death from coronary heart disease. This technology will also enable the elderly to consult regularly with their specialist, without the need to leave their home. Regular check ups will result in greater awareness of medical issues and prompt intervention when necessary.</p>
+
 
 						<!-- Elements -->
 							<article id="elements">
