--- a/index.html
+++ b/index.html
@@ -49,6 +49,35 @@
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
 								<p> My name is Graham Hibbert, but you can call me Doc. I was given the nickname, as my last name reminded my friend of Dr Hibbert from the Simpsons. I enjoy all sports, but mainly Australian Rules Football. I played for several clubs in the amateur leagues, most recently the Warwick/Greenwood Bulls FC. Due to becoming a father for the second time, my priorities have change and I now enjoy spending time with my family. My wife Jacinta and I are proud parents of two children, Hugh (18 months) and baby Novella (6 weeks). Jacinta and I are both born Australians, only speaking English at home with a Christian values but we don’t attend church. We hope to raise our children (with the help of our close family support) to be well educated, hardworking, polite members of society. Other than Sports, my main hobby is motorcycles. I own a 2013 Ducati Diavel Dark, a beautiful motorcycle that I love taking out and riding through the country. It gives me a sense of freedom from the world, a place to be with my own thoughts. Some call it mediation.</a>.</p>
 								<p>I started my schooling at Katanning Primary School, but completed my primary educating in Perth. I graduated to Warwick Senior High, where after five years completed my Tertiary Entrance Examination. Instead of attending university, I stumbled between jobs and never found my feet. Thankfully however my father found me a position in a telecommunication traineeship with Telstra, where I gained my certificate three in telecommunications. After successfully gaining employment, I continued further on-site training and acquired my certificate four. Currently still employed and now a student with RMIT university.</p>
+				<p>-Personal profile-</p>
+				<p>Myers-Briggs Type Indicator (MBTI) test</p>
+<p>ENTJ- (http://www.humanmetrics.com)<br />
+ENTJs have a natural tendency to marshal and direct. The ENTJ requires little encouragement to make a plan. While "compelled" may not describe ENTJs as a group, nevertheless the bent to plan creatively and to make those plans reality is a common theme for NJ types.  
+ENTJs focus on the most efficient and organized means of performing a task. This quality, along with their goal orientation, often makes ENTJs superior leaders, both realistic and visionary in implementing a long-term plan. ENTJs tend to be fiercely independent in their decision making, having a strong will that insulates them against external influence. Generally, highly competent, ENTJs analyse and structure the world around them in a logical and rational way. Due to this straightforward way of thinking, ENTJs tend to have the greatest difficulty of all the types in applying subjective considerations and emotional values into the decision-making process.
+ENTJs often excel in business and other areas that require systems analysis, original thinking, and an economically savvy mind. They are dynamic and pragmatic problem solvers. They tend to have a high degree of confidence in their own abilities, making them assertive and outspoken. In their dealings with others, they are generally outgoing, charismatic, fair-minded, and unaffected by conflict or criticism. 
+They often end up taking charge of a situation that seems (to their mind, at least) to be out of control, or that can otherwise be improved upon and strengthened. They strive to learn new things, which helps them become resourceful problem-solvers. However, since ENTJs rely on provable facts, they may find subjective issues pointless.</p>
+
+				<p>Online learning style test</p>
+<p>Auditory<br />
+Auditory learners learn best when information is presented in a spoken language format. If you are an auditory learner, the suggestions that follow can help you to succeed in school to the best of your ability.</p>
+
+				<p>Big Five Personality test</p>
+<p>The Big Five Factors	<br />	
+Openness to experience	Traditionalist • down-to-earth • practical • conservative<br />	
+Middle	Conscientious • disciplined • efficient • well organised<br />
+Middle	Outgoing • friendly • assertive • likes working with others<br />
+Agreeableness	Hard-headed • sceptical • competitive • proud<br />
+	Not easily upset in stressful situations • relaxed</p>
+
+				<p>What do they mean?</p>
+<p>To me these test results have given me a great insight into my personality. I can recognize many of the traits mentioned in the Myers-Brigg test, but come at no real surprise. However, I found the online learning style test, to be very interesting. I struggled through High School and these tests results go a long way to explaining why. The style of teaching at Warwick High School, was large amounts of written notes on blackboards to be copied down. According to the learning test I needed more auditory based learning to absorb the content. It is invaluable information that will help me to succeed in my further studies.</p>
+
+<p>Influence<br />
+Understanding your personality type, goes a long way to understanding how to collaborate in team environments. According to the Myers-Briggs test I am ‘fiercely independent’, ‘assertive and outspoken’ and ‘efficient and organized’. This tells me I have some positive and negative traits that require continual self-assessment. I need to make sure I work closer with others and allow team members to make decisions and not take control of the decision making. However, being efficient and organised can benefit the team environment, by helping the team to stay motivated and productive. By understanding these traits, I can adjust my approach to participating in team environments. Thus, allowing myself to contribute more positively and professionally.</p>
+
+<p>Forming future teams
+Not only is it important to recognise your own personality, but the traits of future team members. Working with compatible personality types, you are able to form a more cohesive work environment. It prevents personality clashes that can disrupt this positive work environment, which keeps the team motivated and lifts productivity.</p>
+
 							</article>
 
 						<!-- Work -->
@@ -110,9 +139,7 @@ However, as I got older my priorities changed and the games were replaced with s
 <p>Heart monitor- The heart pad monitor is contained in an elastic strap that can be pulled up after stepping into it or pulled over the head like a shirt. This strap is then positioned on the chest so the pad is just below the left breast. The biometric sensors will then detect the hearts rhythm by recording sound and electrical impulses sent to the heart. The information is stored in a graphical layout similar to an electrocardiograph.</p>
 <p>Sim Card- the inbuilt sim card reduces the need for a fixed line connection. Once all data is collected, it is store on site and a copy sent through the 5G network to the specialist practitioner. 5G also allows for the required bandwidth for remote monitoring.</p>
 
-
-
-								<p>Requirements</p>
+								<p>-Requirements-</p>
 								<p>Tools</p>
 <p>To be successful, the project will require an application to be developed to sync to different devices at the same to time. Easy to use functions and step by step instructions for monitor placement. Durable monitors for continual use and also will need to be resistant to water. Monitors will need to be a clinical grade to achieve accurate results. Cost should not be an option. Will also require current medical equipment to calibrate and test the new apparatus. Trial period with qualified specialist practitioners to ensure product performing to specification.</p>  
 								<p>Implementation and feasibility:</p>
@@ -120,7 +147,6 @@ However, as I got older my priorities changed and the games were replaced with s
 <p>Wearable tech- sensor technology already developed and easily adaptable. Sensor can be obtained through sources such as from  https://www.digikey.com.au. Will require experienced electronic engineer to integrate sensors into wearable design.</p>
 								<p>Outcome</p>
 <p>With continual monitoring of patient’s vital life signs, doctors have the ability to track their patients’ health. This close monitoring gives the doctor an early detection tool to assist in diagnoses of underlying medical conditions, to allow greater accuracy in the prescribing of medicine and or medical procedures. By intervening early, it significantly reduces the rate of hospital administrations and death from coronary heart disease. This technology will also enable the elderly to consult regularly with their specialist, without the need to leave their home. Regular check ups will result in greater awareness of medical issues and prompt intervention when necessary.</p>
-
 
 						<!-- Elements -->
 							<article id="elements">
