--- a/index.html
+++ b/index.html
@@ -62,20 +62,20 @@ They often end up taking charge of a situation that seems (to their mind, at lea
 Auditory learners learn best when information is presented in a spoken language format. If you are an auditory learner, the suggestions that follow can help you to succeed in school to the best of your ability.</p>
 
 				<p>Big Five Personality test</p>
-<p>The Big Five Factors	<br />	
+<p>The Big Five Factors-<br />	
 Openness to experience	Traditionalist • down-to-earth • practical • conservative<br />	
 Middle	Conscientious • disciplined • efficient • well organised<br />
 Middle	Outgoing • friendly • assertive • likes working with others<br />
 Agreeableness	Hard-headed • sceptical • competitive • proud<br />
 	Not easily upset in stressful situations • relaxed</p>
 
-				<p>What do they mean?</p>
+				<p>What do they mean?<br />
 <p>To me these test results have given me a great insight into my personality. I can recognize many of the traits mentioned in the Myers-Brigg test, but come at no real surprise. However, I found the online learning style test, to be very interesting. I struggled through High School and these tests results go a long way to explaining why. The style of teaching at Warwick High School, was large amounts of written notes on blackboards to be copied down. According to the learning test I needed more auditory based learning to absorb the content. It is invaluable information that will help me to succeed in my further studies.</p>
 
-<p>Influence<br />
+<p>Influence-<br />
 Understanding your personality type, goes a long way to understanding how to collaborate in team environments. According to the Myers-Briggs test I am ‘fiercely independent’, ‘assertive and outspoken’ and ‘efficient and organized’. This tells me I have some positive and negative traits that require continual self-assessment. I need to make sure I work closer with others and allow team members to make decisions and not take control of the decision making. However, being efficient and organised can benefit the team environment, by helping the team to stay motivated and productive. By understanding these traits, I can adjust my approach to participating in team environments. Thus, allowing myself to contribute more positively and professionally.</p>
 
-<p>Forming future teams
+<p>Forming future teams-<br />
 Not only is it important to recognise your own personality, but the traits of future team members. Working with compatible personality types, you are able to form a more cohesive work environment. It prevents personality clashes that can disrupt this positive work environment, which keeps the team motivated and lifts productivity.</p>
 
 							</article>
