--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@ ENTJs often excel in business and other areas that require systems analysis, ori
 They often end up taking charge of a situation that seems (to their mind, at least) to be out of control, or that can otherwise be improved upon and strengthened. They strive to learn new things, which helps them become resourceful problem-solvers. However, since ENTJs rely on provable facts, they may find subjective issues pointless.</p>
 
 				<p>Online learning style test</p>
-<p>Auditory<br />
+<p>Auditory-https://www.how-to-study.com/learning-style-assessment/ <br />
 Auditory learners learn best when information is presented in a spoken language format. If you are an auditory learner, the suggestions that follow can help you to succeed in school to the best of your ability.</p>
 
 				<p>Big Five Personality test</p>
-<p>The Big Five Factors-<br />	
+<p>The Big Five Factors-https://www.123test.com/<br />	
 Openness to experience	Traditionalist • down-to-earth • practical • conservative<br />	
 Middle	Conscientious • disciplined • efficient • well organised<br />
 Middle	Outgoing • friendly • assertive • likes working with others<br />
