--- a/index.html
+++ b/index.html
@@ -127,10 +127,10 @@ However, as I got older my priorities changed and the games were replaced with s
 								<p>Importance</p>
 <p>Vita Life is a life saving device that can monitor the health of our elderly. According to Australian Institute of Health and Welfare 2018 report (Australia’s health series no. 16. AUS 221) “The prevalence of Coronary Heart Disease (CHD) increases rapidly with age, affecting around 1 in 6 adults aged 75 and over”. With the average age of the population growing and without medical intervention, these statistics will continue to grow. “In 2016, CHD was the leading single cause of death in Australia”. With a simple and easy to use interface, the elderly can help monitor their own life signs, dramatically reducing the response time in case of an emergency.</p>
 								<p>The Vita Life in detail</p>
-<p>•	Vita life’s core is a 10-inch android or iOS tablet with sim card
-•	Weighted docking station
-•	1x ankle monitor  
-•	1x wrist monitor
+<p>•	Vita life’s core is a 10-inch android or iOS tablet with sim card<br />
+•	Weighted docking station<br />
+•	1x ankle monitor <br /> 
+•	1x wrist monitor<br />
 	•	1x heart monitor</p>
 <p>At the centre of Vita Life is a 10-inch tablet running either android or iOS. The display will have three large buttons, for ease of use. Making the interface easy to read quickly, also reduces the time required to call for help. The icons should read left to right- Test – Emergency - Monitor.
 <p>Test- the test function is a quick five minute check-up performed daily. The test will run through a series of checks. First check is the heart rate, taken from both the wrist and ankle monitors. A single snap shot of each heart rate is taken. For the remainder of the test the ankle and wrist monitors will switch to monitor the oxygen levels in the patient’s blood stream. Third function performed is the heart monitor. During this process the heart pad will detect and monitor the heart rhythm over the five minute test. After all tests are complete, a visual and auditable alert will indicate the test process is complete. Once completed the application will save all data to a file and send to the specialists for viewing.</p>
