--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ However, as I got older my priorities changed and the games were replaced with s
 						<!-- About -->
 							<article id="IdealJob">
 								<h2 class="major">Ideal Job</h2>
-								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
+								<span class="image main"><img src="images/heart rate.jpg" alt="" /></span>
 								<img src="images/idealJob.png"/>
 								<p>https://www.seek.com.au/job/38446195?searchrequesttoken=5c0d4c76-6c33-4d76-83af-e5fba3fe0f63&type=standout</p>
 								<p>General Manager Information Technology</p>
