--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ However, as I got older my priorities changed and the games were replaced with s
 						<!-- Contact -->
 							<article id="Project">
 								<h2 class="major">Project</h2>
-								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
+								<span class="image main"><img src="images/heartrate.jpg" alt="" /></span>
 								<p>The Project</p>
 <p>To build a medical device capable of monitoring and reporting a patient’s vital health signs via an online application. Vita Life is a health monitoring apparatus that syncs to your specialist doctor via a simple to use online application. The apparatus will monitor different vital signs such as heart rate, heart arrhythmias, blood pressure and blood oxidation levels. Instantly reporting anomalies to your specialist health care professional. The specialist can then review the patient’s data and act accordingly. Vita Life will have the ability to set alarm parameters, once triggered will request immediate response from either a medical practitioner or emergency medical unit. An ambulance can be dispatched to the GPS coordinates transmitted and a notification to the patient’s specialist if the emergency parameters are met.</p>
 								<p>Importance</p>
