--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ Not only is it important to recognise your own personality, but the traits of fu
 						<!-- Work -->
 							<article id="Interest">
 								<h2 class="major">Interst</h2>
-								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+								<span class="image main"><img src="images/interest.png" alt="" /></span>
 								<p>Background</p>
 									
 <p>My fascination with IT started when the first computer arrived home. I remember sitting on the floor watching my father put it together. After a bit of persistent asking, I was allowed to have a look. From that moment on I was hooked. I remember playing Monster Truck Madness for hours, like it was yesterday. Bed time was always hard, but we would always find excuses why we needed to stay up. 
