--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
 							<article id="Profile">
 								<h2 class="major">Profile</h2>
 								<span class="image main"><img src="images/profile.jpg" alt="" /></span>
+								<p>•	Graham Hibbert<br />
+•	Student number s3738283<br />
+									•	Email- s3738283@student.rmit.edu.au</p>
+
 								<p> My name is Graham Hibbert, but you can call me Doc. I was given the nickname, as my last name reminded my friend of Dr Hibbert from the Simpsons. I enjoy all sports, but mainly Australian Rules Football. I played for several clubs in the amateur leagues, most recently the Warwick/Greenwood Bulls FC. Due to becoming a father for the second time, my priorities have change and I now enjoy spending time with my family. My wife Jacinta and I are proud parents of two children, Hugh (18 months) and baby Novella (6 weeks). Jacinta and I are both born Australians, only speaking English at home with a Christian values but we don’t attend church. We hope to raise our children (with the help of our close family support) to be well educated, hardworking, polite members of society. Other than Sports, my main hobby is motorcycles. I own a 2013 Ducati Diavel Dark, a beautiful motorcycle that I love taking out and riding through the country. It gives me a sense of freedom from the world, a place to be with my own thoughts. Some call it mediation.</a>.</p>
 								<p>I started my schooling at Katanning Primary School, but completed my primary educating in Perth. I graduated to Warwick Senior High, where after five years completed my Tertiary Entrance Examination. Instead of attending university, I stumbled between jobs and never found my feet. Thankfully however my father found me a position in a telecommunication traineeship with Telstra, where I gained my certificate three in telecommunications. After successfully gaining employment, I continued further on-site training and acquired my certificate four. Currently still employed and now a student with RMIT university.</p>
 				<p>-Personal profile-</p>
