--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@ However, as I got older my priorities changed and the games were replaced with s
 <p>Certificate four in Telecommunications and 12+ years’ experience in the IT industry. Currently have 5+ years’ experience in team management. A positive and innovative mindset and exceptional interpersonal skills.</p>
 								<p>Future Pathway</p>
 <p>To obtain an equivalent position, I must complete the Bachelor of Information Technology degree. Then further the degree in network engineering, also acquiring several certifications such CCNA, CCNP etc. To compliment the degrees, I require a job in a relevant field to obtain the necessary experience required to handle complex IT Platforms.</p>
+								<p>-Plan-</p>
 <p>•	1-3 years- Complete Bachelor of Information and Technology degree<br />
 •	Acquire position as a System Administrator<br />
 •	4-5 years- further network engineering study<br />
